--- a/index.html
+++ b/index.html
@@ -2,19 +2,55 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>No Property Tax SC</title>
+  <title>NO PROPERTY TAX SC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { margin:0; background:#f5d742; text-align:center; font-family: Georgia, serif; }
-    img { max-width:90%; height:auto; margin-top:30px; }
-    h1 { font-size:3em; color:#000; margin:40px; }
-    p { font-size:1.5em; max-width:800px; margin:0 auto 60px; }
+    body { margin:0; background:#f5d742; color:#000; font-family:Georgia, serif; text-align:center; line-height:1.5; }
+    header { padding:40px 20px 20px; background:#000; color:#f5d742; }
+    h1 { font-size:4.5em; margin:0; letter-spacing:8px; text-transform:uppercase; font-weight:bold; }
+    .flag { max-width:90%; margin:40px auto; display:block; }
+    .content { max-width:900px; margin:0 auto; padding:20px; }
+    p { font-size:1.6em; margin:30px auto; max-width:800px; }
+    .button {
+      display:inline-block; background:#000; color:#f5d742; padding:20px 50px;
+      font-size:2em; text-decoration:none; border:4px solid #000; margin:40px;
+      text-transform:uppercase; letter-spacing:4px; font-weight:bold;
+      transition:0.3s;
+    }
+    .button:hover { background:#f5d742; color:#000; }
+    .social { margin:60px; }
+    .social a { margin:0 15px; font-size:3em; color:#000; text-decoration:none; }
+    footer { background:#000; color:#f5d742; padding:40px; margin-top:80px; }
+    footer a { color:#f5d742; }
   </style>
 </head>
 <body>
-  <h1>NO PROPERTY TAX SC</h1>
-  <img src="NPTSC final.jpg" alt="Gadsden flag – No Property Tax SC">
-  <p><strong>South Carolina deserves real property tax relief.</strong><br>
-     Join the movement — sign the petition, share the flag, take back our rights.</p>
+
+  <header>
+    <h1>No Property Tax SC</h1>
+  </header>
+
+  <main class="content">
+    <img src="NPTSC final.jpg" alt="No Property Tax SC Gadsden Flag" class="flag">
+
+    <p><strong>South Carolina homeowners are being crushed.</strong><br>
+       It’s time to end property tax forever — no more ransom on your home.</p>
+
+    <a href="#petition" class="button">Sign the Petition Now</a>
+
+    <div class="social">
+      <p>Share the movement:</p>
+      <a href="https://www.facebook.com/sharer/sharer.php?u=YOUR-URL-HERE" target="_blank">Facebook</a>
+      <a href="https://twitter.com/intent/tweet?text=No%20Property%20Tax%20SC%20-%20Join%20the%20movement!&url=YOUR-URL-HERE" target="_blank">Twitter</a>
+      <a href="https://t.me/share/url?url=YOUR-URL-HERE&text=No%20Property%20Tax%20SC" target="_blank">Telegram</a>
+    </div>
+  </main>
+
+  <footer>
+    <p><strong>No Property Tax South Carolina</strong><br>
+       A grassroots movement to abolish property tax in SC<br>
+       Contact: nopropertytaxsc@proton.me | Made with fire in South Carolina</p>
+  </footer>
+
 </body>
 </html>
