--- a/index.html
+++ b/index.html
@@ -5,23 +5,16 @@
   <title>NO PROPERTY TAX SC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { margin:0; background:#f5d742; color:#000; font-family:Georgia, serif; text-align:center; line-height:1.5; }
+    body { margin:0; background:#f5d742; color:#000; font-family:Georgia, serif; text-align:center; }
     header { padding:40px 20px 20px; background:#000; color:#f5d742; }
     h1 { font-size:4.5em; margin:0; letter-spacing:8px; text-transform:uppercase; font-weight:bold; }
     .flag { max-width:90%; margin:40px auto; display:block; }
     .content { max-width:900px; margin:0 auto; padding:20px; }
     p { font-size:1.6em; margin:30px auto; max-width:800px; }
-    .button {
-      display:inline-block; background:#000; color:#f5d742; padding:20px 50px;
-      font-size:2em; text-decoration:none; border:4px solid #000; margin:40px;
-      text-transform:uppercase; letter-spacing:4px; font-weight:bold;
-      transition:0.3s;
-    }
-    .button:hover { background:#f5d742; color:#000; }
-    .social { margin:60px; }
-    .social a { margin:0 15px; font-size:3em; color:#000; text-decoration:none; }
+    .petition { margin:60px auto; max-width:800px; border:8px solid #000; background:white; overflow:hidden; }
     footer { background:#000; color:#f5d742; padding:40px; margin-top:80px; }
     footer a { color:#f5d742; }
+    iframe { width:100%; height:950px; border:none; display:block; }
   </style>
 </head>
 <body>
@@ -31,25 +24,21 @@
   </header>
 
   <main class="content">
-    <img src="NPTSC final.jpg" alt="No Property Tax SC Gadsden Flag" class="flag">
+    <img src="NPTSC final.jpg" alt="No Property Tax SC Flag" class="flag">
 
     <p><strong>South Carolina homeowners are being crushed.</strong><br>
-       It’s time to end property tax forever — no more ransom on your home.</p>
+       End property tax forever — no more ransom on your home.</p>
 
-    <a href="#petition" class="button">Sign the Petition Now</a>
-
-    <div class="social">
-      <p>Share the movement:</p>
-      <a href="https://www.facebook.com/sharer/sharer.php?u=YOUR-URL-HERE" target="_blank">Facebook</a>
-      <a href="https://twitter.com/intent/tweet?text=No%20Property%20Tax%20SC%20-%20Join%20the%20movement!&url=YOUR-URL-HERE" target="_blank">Twitter</a>
-      <a href="https://t.me/share/url?url=YOUR-URL-HERE&text=No%20Property%20Tax%20SC" target="_blank">Telegram</a>
+    <div class="petition">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDp-rdFfyqg_8IW1zT3KkCgcjhsNTONFnfsX8Dyv164HSK-w/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
+
   </main>
 
   <footer>
     <p><strong>No Property Tax South Carolina</strong><br>
        A grassroots movement to abolish property tax in SC<br>
-       Contact: nopropertytaxsc@proton.me | Made with fire in South Carolina</p>
+       Every signature is stored securely • Contact: nopropertytaxsc@proton.me</p>
   </footer>
 
 </body>
