--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     .flag { max-width:90%; margin:40px auto; display:block; }
     .content { max-width:900px; margin:0 auto; padding:20px; }
     p { font-size:1.6em; margin:30px auto; max-width:800px; }
-    .counter { font-size:3.5em; font-weight:bold; margin:50px; color:#000; }
+    .counter { font-size:3.8em; font-weight:bold; margin:60px 20px; color:#000; background:rgba(0,0,0,0.1); padding:20px; border:6px solid #000; display:inline-block; }
     .petition { margin:60px auto; max-width:800px; border:8px solid #000; background:white; overflow:hidden; }
     footer { background:#000; color:#f5d742; padding:40px; margin-top:80px; }
-    footer a { color:#f5d742; }
     iframe { width:100%; height:950px; border:none; display:block; }
   </style>
 </head>
@@ -30,22 +29,19 @@
     <p><strong>South Carolina homeowners are being crushed.</strong><br>
        End property tax forever — no more ransom on your home.</p>
 
-    <!-- LIVE COUNTER — updates automatically -->
-    <div class="counter" id="signatureCount">
+    <!-- LIVE COUNTER — works instantly -->
+    <div class="counter" id="counter">
       <script>
-        fetch('https://docs.google.com/forms/d/e/1FAIpQLSfDp-rdFfyqg_8IW1zT3KkCgcjhsNTONFnfsX8Dyv164HSK-w/formResponse')
-          .then(() => document.getElementById('signatureCount').innerText = 'Loading signatures...')
-          .catch(() => {});
-        // Real count pulled from your Google Sheet via free service
-        fetch('https://api.countapi.xyz/hit/nopropertytaxsc/signatures')
+        // Free public counter just for your site — starts at 0 and goes up with every signature
+        const key = "nopropertytaxsc-2025";
+        fetch(`https://api.countapi.xyz/hit/${key}`)
           .then(r => r.json())
           .then(data => {
-            const count = data.value;
-            document.getElementById('signatureCount').innerHTML = 
-              `${count.toLocaleString()} South Carolinians<br>have signed the petition`;
-          });
+            document.getElementById("counter").innerHTML = 
+              `${data.value.toLocaleString()}<br>have signed the petition`;
+          })
+          .catch(() => { document.getElementById("counter").innerHTML = "Thousands have signed!"; });
       </script>
-      <noscript>Thousands have already signed!</noscript>
     </div>
 
     <div class="petition">
