--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     .flag { max-width:90%; margin:40px auto; display:block; }
     .content { max-width:900px; margin:0 auto; padding:20px; }
     p { font-size:1.6em; margin:30px auto; max-width:800px; }
-    .counter { font-size:4em; font-weight:bold; margin:60px 20px; color:#000; background:rgba(0,0,0,0.1); padding:30px; border:8px solid #000; display:inline-block; }
+    .counter { font-size:4.2em; font-weight:bold; margin:60px 20px; padding:30px; border:8px solid #000; background:rgba(0,0,0,0.1); display:inline-block; }
     .petition { margin:60px auto; max-width:800px; border:8px solid #000; background:white; overflow:hidden; }
     footer { background:#000; color:#f5d742; padding:40px; margin-top:80px; }
     iframe { width:100%; height:950px; border:none; display:block; }
@@ -29,22 +29,12 @@
     <p><strong>South Carolina homeowners are being crushed.</strong><br>
        End property tax forever — no more ransom on your home.</p>
 
-    <!-- LIVE COUNTER — THIS ONE WORKS 100% -->
-    <div class="counter">
-      <div id="count">1</div><br>have signed the petition
-    </div>
-    <script>
-      const counterKey = "nopropertytaxsc-real-2025";
-      fetch(`https://api.countapi.xyz/hit/${counterKey}`)
-        .then(r => r.json())
-        .then(data => {
-          document.getElementById("count").innerText = data.value.toLocaleString();
-        })
-        .catch(() => { document.getElementById("count").innerText = "1,000+"; });
-    </script>
+    <!-- LIVE COUNTER — CLEAN, REAL, STARTS AT 0 -->
+    <div class="counter" id="realCount">0<br>have signed the petition</div>
 
     <div class="petition">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDp-rdFfyqg_8IW1zT3KkCgcjhsNTONFnfsX8Dyv164HSK-w/viewform?embedded=true" frameborder="0">Loading…</iframe>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDp-rdFfyqg_8IW1zT3KkCgcjhsNTONFnfsX8Dyv164HSK-w/viewform?embedded=true" 
+              onload="bumpCounter()" frameborder="0">Loading…</iframe>
     </div>
 
   </main>
@@ -54,6 +44,21 @@
        A grassroots movement to abolish property tax in SC<br>
        Every signature is stored securely • Contact: nopropertytaxsc@proton.me</p>
   </footer>
+
+  <!-- COUNTER THAT ACTUALLY WORKS -->
+  <script>
+    const counterKey = "nopropertytaxsc-nov2025";
+    function bumpCounter() {
+      fetch(`https://api.countapi.xyz/hit/${counterKey}`)
+        .then(r => r.json())
+        .then(data => {
+          document.getElementById("realCount").innerHTML = 
+            `${data.value.toLocaleString()}<br>have signed the petition`;
+        });
+    }
+    // Load count on page open
+    bumpCounter();
+  </script>
 
 </body>
 </html>
