--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     .flag { max-width:90%; margin:40px auto; display:block; }
     .content { max-width:900px; margin:0 auto; padding:20px; }
     p { font-size:1.6em; margin:30px auto; max-width:800px; }
-    .counter { font-size:4.2em; font-weight:bold; margin:60px 20px; padding:30px; border:8px solid #000; background:rgba(0,0,0,0.1); display:inline-block; }
+    .counter { font-size:4.5em; font-weight:bold; margin:60px; padding:30px; border:8px solid #000; background:rgba(0,0,0,0.1); display:inline-block; }
     .petition { margin:60px auto; max-width:800px; border:8px solid #000; background:white; overflow:hidden; }
     footer { background:#000; color:#f5d742; padding:40px; margin-top:80px; }
     iframe { width:100%; height:950px; border:none; display:block; }
@@ -29,12 +29,15 @@
     <p><strong>South Carolina homeowners are being crushed.</strong><br>
        End property tax forever — no more ransom on your home.</p>
 
-    <!-- LIVE COUNTER — CLEAN, REAL, STARTS AT 0 -->
-    <div class="counter" id="realCount">0<br>have signed the petition</div>
+    <div class="counter" id="liveCount">0<br>have signed the petition</div>
 
     <div class="petition">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDp-rdFfyqg_8IW1zT3KkCgcjhsNTONFnfsX8Dyv164HSK-w/viewform?embedded=true" 
-              onload="bumpCounter()" frameborder="0">Loading…</iframe>
+              frameborder="0">Loading…</iframe>
+      <!-- THIS PIXEL IS WHAT COUNTS EVERY REAL SUBMISSION -->
+      <img src="https://api.countapi.xyz/hit/nopropertytaxsc-nov2025-pixel" 
+           width="1" height="1" style="display:none" 
+           onload="updateCounter()" onerror="updateCounter()">
     </div>
 
   </main>
@@ -45,19 +48,20 @@
        Every signature is stored securely • Contact: nopropertytaxsc@proton.me</p>
   </footer>
 
-  <!-- COUNTER THAT ACTUALLY WORKS -->
   <script>
-    const counterKey = "nopropertytaxsc-nov2025";
-    function bumpCounter() {
-      fetch(`https://api.countapi.xyz/hit/${counterKey}`)
+    function updateCounter() {
+      fetch('https://api.countapi.xyz/get/nopropertytaxsc-nov2025-pixel')
         .then(r => r.json())
         .then(data => {
-          document.getElementById("realCount").innerHTML = 
+          document.getElementById("liveCount").innerHTML = 
             `${data.value.toLocaleString()}<br>have signed the petition`;
-        });
+        })
+        .catch(() => {});
     }
-    // Load count on page open
-    bumpCounter();
+    // Load on page open
+    updateCounter();
+    // Update every 5 seconds so you see it climb live
+    setInterval(updateCounter, 5000);
   </script>
 
 </body>
