--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
     .reps-section { background:white; padding:40px; border:8px solid #000; margin:40px auto; max-width:900px; text-align:left; }
     .reps-section h2 { text-align:center; font-size:2em; }
     .zip-lookup { margin:20px 0; }
-    .zip-input { padding:10px; font-size:1.2em; width:200px; }
+    .zip-input { padding:10px; font-size:1.2em; width:200px; border:2px solid #000; }
+    .find-btn { padding:10px 20px; font-size:1.2em; background:#000; color:#f5d742; border:2px solid #000; cursor:pointer; }
+    .find-btn:hover { background:#f5d742; color:#000; }
     .reps-list { margin-top:20px; }
     .rep-card { border:2px solid #000; padding:15px; margin:10px 0; background:#f9f9f9; }
     .rep-name { font-weight:bold; font-size:1.3em; }
     .rep-contact a { color:#000; text-decoration:none; }
+    .email-template { background:#f9f9f9; padding:15px; margin:20px 0; border-left:4px solid #000; }
     footer { background:#000; color:#f5d742; padding:40px; }
     iframe { width:100%; height:1000px; border:none; }
+    .loading { font-style:italic; color:#666; }
+    .error { color:red; }
   </style>
 </head>
 <body>
@@ -84,9 +89,21 @@
       <p>Find your House and Senate reps by ZIP code. Call or email them: "I oppose property taxes — vote to abolish them in 2026!"</p>
       <div class="zip-lookup">
         <input type="text" id="zipInput" placeholder="Enter ZIP Code (e.g., 29201)" class="zip-input">
-        <button onclick="findReps()">Find My Reps</button>
+        <button onclick="findReps()" class="find-btn">Find My Reps</button>
       </div>
-      <div id="repsList" class="reps-list"></div>
+      <div id="repsList" class="reps-list">
+        <p class="loading">Enter a ZIP code and click "Find My Reps" to get started.</p>
+      </div>
+      <div class="email-template">
+        <h3>Pre-Written Email Template</h3>
+        <p>Copy this and paste into your email:</p>
+        <p><strong>Subject: Abolish Property Taxes in SC – Urgent Action Needed</strong><br>
+        Dear [Rep's Name],<br>
+        As a constituent in [District], I demand you support the complete abolition of property taxes in South Carolina. This regressive tax is destroying families and businesses. Vote YES on the 2026 constitutional amendment to end it forever.<br>
+        Sincerely,<br>
+        [Your Name]<br>
+        [Your ZIP Code]</p>
+      </div>
     </div>
   </main>
 
@@ -98,51 +115,12 @@
 
   <script>
     async function findReps() {
-      const zip = document.getElementById('zipInput').value;
-      if (!zip) return;
-      try {
-        const response = await fetch(`https://www.scstatehouse.gov/legislatorssearch.php?zip=${zip}`);
-        const text = await response.text();
-        // Parse the HTML response for reps (simple JS parsing for name, district, contact)
-        const parser = new DOMParser();
-        const doc = parser.parseFromString(text, 'text/html');
-        const reps = [];
-        // Extract House reps
-        doc.querySelectorAll('.member-name').forEach(el => {
-          const name = el.textContent.trim();
-          const district = el.closest('tr') ? el.closest('tr').querySelector('.district').textContent : '';
-          const phone = el.closest('tr') ? el.closest('tr').querySelector('.phone').textContent : '';
-          const email = el.closest('tr') ? el.closest('tr').querySelector('.email a').href.replace('mailto:', '') : '';
-          reps.push({ name, district: `House District ${district}`, phone, email });
-        });
-        // Extract Senate reps
-        doc.querySelectorAll('.senator-name').forEach(el => {
-          const name = el.textContent.trim();
-          const district = el.closest('tr') ? el.closest('tr').querySelector('.district').textContent : '';
-          const phone = el.closest('tr') ? el.closest('tr').querySelector('.phone').textContent : '';
-          const email = el.closest('tr') ? el.closest('tr').querySelector('.email a').href.replace('mailto:', '') : '';
-          reps.push({ name, district: `Senate District ${district}`, phone, email });
-        });
-        displayReps(reps);
-      } catch (error) {
-        document.getElementById('repsList').innerHTML = '<p>Try again or visit <a href="https://www.scstatehouse.gov/legislatorssearch.php" target="_blank">scstatehouse.gov</a> to find your reps.</p>';
+      const zip = document.getElementById('zipInput').value.trim();
+      if (!zip || zip.length !== 5 || isNaN(zip)) {
+        document.getElementById('repsList').innerHTML = '<p class="error">Please enter a valid 5-digit ZIP code.</p>';
+        return;
       }
-    }
-    function displayReps(reps) {
-      let html = '<h3>Your Representatives:</h3>';
-      reps.forEach(rep => {
-        html += `
-          <div class="rep-card">
-            <div class="rep-name">${rep.name}</div>
-            <p><strong>District:</strong> ${rep.district}</p>
-            <p><strong>Phone:</strong> <a href="tel:${rep.phone}">${rep.phone}</a></p>
-            <p><strong>Email:</strong> <a href="mailto:${rep.email}">${rep.email}</a></p>
-          </div>
-        `;
-      });
-      document.getElementById('repsList').innerHTML = html;
-    }
-  </script>
-
-</body>
-</html>
+      document.getElementById('repsList').innerHTML = '<p class="loading">Finding your reps...</p>';
+      try {
+        // Use Open States API for SC legislators by ZIP
+        const response = await fetch(`https://openstates.org/api/v1/legislators/?state=sc&district__icontains=${zip}&per_page=50&apikey=missingkey
