--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     .reps-section h2 { text-align:center; font-size:2em; }
     .zip-lookup { margin:20px 0; }
     .zip-input { padding:10px; font-size:1.2em; width:200px; border:2px solid #000; }
-    .find-btn { padding:10px 20px; font-size:1.2em; background:#000; color:#f5d742; border:2px solid #000; cursor:pointer; }
+    .find-btn { padding:10px 20px; font-size:1.2em; background:#000; color:#f5d742; border:2px solid #000; cursor:pointer; text-decoration:none; display:inline-block; }
     .find-btn:hover { background:#f5d742; color:#000; }
     .reps-list { margin-top:20px; }
     .rep-card { border:2px solid #000; padding:15px; margin:10px 0; background:#f9f9f9; }
@@ -89,7 +89,7 @@
       <p>Find your House and Senate reps by ZIP code. Call or email them: "I oppose property taxes — vote to abolish them in 2026!"</p>
       <div class="zip-lookup">
         <input type="text" id="zipInput" placeholder="Enter ZIP Code (e.g., 29201)" class="zip-input">
-        <button onclick="findReps()" class="find-btn">Find My Reps</button>
+        <a id="findRepsBtn" href="#" onclick="findReps(); return false;" class="find-btn">Find My Reps</a>
       </div>
       <div id="repsList" class="reps-list">
         <p class="loading">Enter a ZIP code and click "Find My Reps" to get started.</p>
@@ -114,13 +114,18 @@
   </footer>
 
   <script>
-    async function findReps() {
+    function findReps() {
       const zip = document.getElementById('zipInput').value.trim();
       if (!zip || zip.length !== 5 || isNaN(zip)) {
         document.getElementById('repsList').innerHTML = '<p class="error">Please enter a valid 5-digit ZIP code.</p>';
         return;
       }
-      document.getElementById('repsList').innerHTML = '<p class="loading">Finding your reps...</p>';
-      try {
-        // Use Open States API for SC legislators by ZIP
-        const response = await fetch(`https://openstates.org/api/v1/legislators/?state=sc&district__icontains=${zip}&per_page=50&apikey=missingkey
+      // Open official SC State House lookup with ZIP pre-filled
+      const officialUrl = `https://www.scstatehouse.gov/legislatorssearch.php?zip=${zip}`;
+      window.open(officialUrl, '_blank');
+      document.getElementById('repsList').innerHTML = '<p class="loading">Opening official lookup in new tab... Results will show your reps\' names, districts, phone, and email. Copy the template above and contact them!</p>';
+    }
+  </script>
+
+</body>
+</html>
