--- a/index.html
+++ b/index.html
@@ -14,21 +14,16 @@
     .petition-text h2 { text-align:center; font-size:2.2em; margin-top:0; }
     .petition-text ol, .petition-text ul { padding-left:30px; }
     .form-box { margin:60px auto; max-width:800px; border:8px solid #000; background:white; overflow:hidden; }
-    .reps-section { background:white; padding:40px; border:8px solid #000; margin:40px auto; max-width:900px; text-align:left; }
-    .reps-section h2 { text-align:center; font-size:2em; }
-    .zip-lookup { margin:20px 0; }
-    .zip-input { padding:10px; font-size:1.2em; width:200px; border:2px solid #000; }
-    .find-btn { padding:10px 20px; font-size:1.2em; background:#000; color:#f5d742; border:2px solid #000; cursor:pointer; text-decoration:none; display:inline-block; }
-    .find-btn:hover { background:#f5d742; color:#000; }
-    .reps-list { margin-top:20px; }
-    .rep-card { border:2px solid #000; padding:15px; margin:10px 0; background:#f9f9f9; }
-    .rep-name { font-weight:bold; font-size:1.3em; }
-    .rep-contact a { color:#000; text-decoration:none; }
-    .email-template { background:#f9f9f9; padding:15px; margin:20px 0; border-left:4px solid #000; }
+    .social-buttons { margin:60px auto; text-align:center; }
+    .social-buttons a { 
+      display:inline-block; margin:15px; padding:18px 40px; 
+      font-size:2em; font-weight:bold; color:#f5d742; background:#000; 
+      text-decoration:none; border:5px solid #000; text-transform:uppercase;
+      transition:0.3s;
+    }
+    .social-buttons a:hover { background:#f5d742; color:#000; }
     footer { background:#000; color:#f5d742; padding:40px; }
     iframe { width:100%; height:1000px; border:none; }
-    .loading { font-style:italic; color:#666; }
-    .error { color:red; }
   </style>
 </head>
 <body>
@@ -42,19 +37,12 @@
 
     <div class="petition-text">
       <h2>South Carolina Petition to Abolish All Property Taxes and Replace Them with a Fair, Broad-Based Revenue System</h2>
-      <p><strong>Title:</strong><br>
-      Abolish Property Taxes in South Carolina – Let South Carolinians Truly Own Their Homes and Businesses</p>
-
+      <p><strong>Title:</strong><br>Abolish Property Taxes in South Carolina – Let South Carolinians Truly Own Their Homes and Businesses</p>
       <p>To the Honorable Members of the South Carolina General Assembly and Governor Henry McMaster:</p>
-
       <p>We, the undersigned residents and taxpayers of South Carolina, respectfully demand the complete and permanent abolition of all ad valorem property taxes on real estate and personal property in our state.</p>
-
       <p>For far too long, South Carolinians have been forced to pay an annual ransom to government simply to keep what we have worked a lifetime to own. A tax on property is not a tax on luxury—it is a tax on existence. It punishes families for putting down roots, seniors for staying in the homes they raised their children in, farmers for feeding our state, and small businesses for creating jobs. It drives retirees out of South Carolina and discourages new families and employers from moving in.</p>
-
       <p>No citizen of a free state should ever face the threat of a tax lien or forced sale of their home because they fell behind on an arbitrary government bill tied to the assessed value of their property rather than their ability to pay.</p>
-
       <p>We recognize that schools, public safety, roads, and local services must be funded. Therefore, we call on the General Assembly to:</p>
-
       <ol>
         <li>Permanently eliminate all property taxes on owner-occupied homes, rental properties, commercial buildings, farms, and personal property.</li>
         <li>Replace the lost revenue through a combination of:
@@ -67,15 +55,11 @@
         </li>
         <li>Place a binding constitutional amendment on the next general election ballot to prohibit any future legislature from re-imposing property taxes without a two-thirds supermajority vote of both houses and approval by the people in a statewide referendum.</li>
       </ol>
-
       <p>South Carolina already has one of the lowest property tax burdens in America—yet we still collect billions every year while our people live in fear of the next reassessment. It is time to finish the job. Nine states thrive without a personal income tax; it is past time for South Carolina to become the first state in the Southeast to free its citizens from property taxation entirely.</p>
-
       <p>We, the undersigned, declare that ownership is not a privilege to be rented from the government—it is a right. We will remember at the ballot box which elected officials stand with the people and which stand with the tax collectors.</p>
-
       <p><strong>Let South Carolina lead the nation once again.<br>
       Abolish property taxes now.<br>
       Make South Carolina the True Property Tax-Free State.</strong></p>
-
       <p><strong>We demand action in the 2026 legislative session.</strong></p>
     </div>
 
@@ -83,28 +67,12 @@
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDp-rdFfyqg_8IW1zT3KkCgcjhsNTONFnfsX8Dyv164HSK-w/viewform?embedded=true" frameborder="0">Loading petition…</iframe>
     </div>
 
-    <!-- CONTACT YOUR REPS SECTION -->
-    <div class="reps-section">
-      <h2>Contact Your State Representatives</h2>
-      <p>Find your House and Senate reps by ZIP code. Call or email them: "I oppose property taxes — vote to abolish them in 2026!"</p>
-      <div class="zip-lookup">
-        <input type="text" id="zipInput" placeholder="Enter ZIP Code (e.g., 29201)" class="zip-input">
-        <a id="findRepsBtn" href="#" onclick="findReps(); return false;" class="find-btn">Find My Reps</a>
-      </div>
-      <div id="repsList" class="reps-list">
-        <p class="loading">Enter a ZIP code and click "Find My Reps" to get started.</p>
-      </div>
-      <div class="email-template">
-        <h3>Pre-Written Email Template</h3>
-        <p>Copy this and paste into your email:</p>
-        <p><strong>Subject: Abolish Property Taxes in SC – Urgent Action Needed</strong><br>
-        Dear [Rep's Name],<br>
-        As a constituent in [District], I demand you support the complete abolition of property taxes in South Carolina. This regressive tax is destroying families and businesses. Vote YES on the 2026 constitutional amendment to end it forever.<br>
-        Sincerely,<br>
-        [Your Name]<br>
-        [Your ZIP Code]</p>
-      </div>
+    <!-- SOCIAL MEDIA BUTTONS – with your real links, no Facebook -->
+    <div class="social-buttons">
+      <a href="https://x.com/nopropertytaxsc" target="_blank">X</a>
+      <a href="https://www.instagram.com/nopropertytaxsc/" target="_blank">Instagram</a>
     </div>
+
   </main>
 
   <footer>
@@ -112,20 +80,6 @@
        A grassroots movement to abolish property tax in SC<br>
        Every signature is stored securely • Contact: nopropertytaxsc@proton.me</p>
   </footer>
-
-  <script>
-    function findReps() {
-      const zip = document.getElementById('zipInput').value.trim();
-      if (!zip || zip.length !== 5 || isNaN(zip)) {
-        document.getElementById('repsList').innerHTML = '<p class="error">Please enter a valid 5-digit ZIP code.</p>';
-        return;
-      }
-      // Open official SC State House lookup with ZIP pre-filled
-      const officialUrl = `https://www.scstatehouse.gov/legislatorssearch.php?zip=${zip}`;
-      window.open(officialUrl, '_blank');
-      document.getElementById('repsList').innerHTML = '<p class="loading">Opening official lookup in new tab... Results will show your reps\' names, districts, phone, and email. Copy the template above and contact them!</p>';
-    }
-  </script>
 
 </body>
 </html>
